# bank-statement-parser

./: README.md  pyproject.toml
src/bank_statement_parser/: __init__.py  __main__.py  bank_statement_parser.py
